# BayesNet

./: .gitignore  5PN2q_cpt_iteration_1.txt  5PN2q_cpt_iteration_2.txt  5PN2q_cuts_iteration_1.txt  5PN2q_cuts_iteration_2.txt  5PN2q_features.txt  5PN2q_graph_iteration_1.txt  5PN2q_graph_iteration_2.txt  5PN2q_initial_cuts.txt  5PN2q_score_initial.txt  5PN2q_score_iteration_1.txt  5PN2q_score_iteration_2.txt  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CMakeUserPresets.json  CONAN_README.md  ITERATIVE_PROPOSAL_README.md  Makefile  Makefile.iterative  README.md  REVIEW.md  REVISION_TECNICA_BAYESNET.md  analisis_tests_fallidos.md  bayesnetConfig.cmake.in  conandata.yml  conanfile.py  diagnostico_previo_2_0.md  feature_select_issues_may2026.md  local_discretization_analysis.md  package-lock.json  package.json  plan_2_0.md  test_iterative_proposal.cpp  update_coverage.py  vcpkg-configuration.json  vcpkg.json
.claude/: settings.local.json
.devcontainer/: Dockerfile
.gitea/workflows/: testing.yaml
.sonarlint/: connectedMode.json
bayesnet/classifiers/: Classifier.cc  Classifier.h  IterativeProposal.cc  IterativeProposal.h  KDB.h  KDBLd.cc  KDBLd.h  Proposal.cc  Proposal.h  SPODELd.cc  SPODELd.h  TANLd.cc  TANLd.h  TANLdi.cc  TANLdi.h
bayesnet/ensembles/: AODELd.cc  AODELd.h  Boost.cc  Boost.h  BoostAODE.cc  XBAODE.cc
bayesnet/feature_selection/: CFS.cc  FeatureSelect.cc  IWSS.cc  L1FS.cc  L1FS.h
bayesnet/network/: Network.cc  Network.h  Node.cc  Node.h
bayesnet/utils/: CountingSemaphore.h
config/: config.h.in
reports/ld/: claude_report_ld.md  codex_context_report_ld.md  codex_report_ld.md  gemini_report_ld.md
sample/: CMakeLists.txt  Makefile  conanfile.txt  notas.arff  sample copy.cc  sample.cc  sample_xspode.cc  vcpkg-configuration.json  vcpkg.json
test_package/: CMakeLists.txt  conanfile.py  test_bayesnet.cpp
tests/: CMakeLists.txt  README.md  TestBayesEnsemble.cc  TestBayesModels.cc  TestBayesNetwork.cc  TestBayesNode.cc  TestBoostA2DE.cc  TestBoostAODE.cc  TestFeatureSelection.cc  TestGolden.cc  TestModulesVersions.cc  TestUtils.cc  TestUtils.h  TestXBA2DE.cc  TestXBAODE.cc  TestXSPODE.cc  TestXSPnDE.cc
tests/data/: all.txt
tests/data/golden/: golden_A2DE.json  golden_AODE.json  golden_AODELd.json  golden_BoostA2DE.json  golden_BoostAODE.json  golden_KDB.json  golden_KDBLd.json  golden_SPODE.json  golden_SPODELd.json  golden_SPnDE.json  golden_TAN.json  golden_TANLd.json  golden_XBA2DE.json  golden_XBAODE.json  golden_XSP2DE.json  golden_XSPODE.json
